<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pajokka.githubuser.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.pajokka.githubuser.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.pajokka.githubuser.ui.setting.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/favorite_fragment" />

</navigation>