<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_parent"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:layout_marginBottom="25dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="?attr/selector_background_color"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:src="@color/grey_100"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="7dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        android:text="@string/muhammad"
        android:textColor="@color/grey_100"
        android:background="@color/grey_100"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/grey_100"
        android:background="@color/grey_100"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        android:text="@string/company" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:background="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="@+id/tv_location"
            app:layout_constraintStart_toEndOf="@+id/tv_location"
            app:layout_constraintTop_toTopOf="@+id/tv_location" />

        <ImageView
            android:id="@+id/iv_repo"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/repository"
            android:src="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/grey_100"
            android:textSize="14sp"
            android:background="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="@+id/iv_repo"
            app:layout_constraintStart_toEndOf="@+id/iv_repo"
            app:layout_constraintTop_toTopOf="@+id/iv_repo"
            android:text="@string/location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
