<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.main.MainActivity"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_top"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardBackgroundColor="?attr/selector_background_color"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:contentPadding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_blue"
                    android:paddingStart="24dp"
                    android:paddingTop="24dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="24dp">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="start"
                        android:contentDescription="@string/category"
                        android:src="@drawable/ic_category" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/hi_ridhoi"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:autofillHints="Search User"
                        android:background="@drawable/shape_retangle_search"
                        android:inputType="textPersonName"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:theme="@style/SearchViewStyle"
                        app:iconifiedByDefault="false"
                        app:queryHint="@string/search_user"
                        app:searchIcon="@drawable/ic_search"
                        tools:ignore="TextContrastCheck" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/user_github"
            android:textColor="?attr/text_color"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_top" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userGithub"
            tools:listitem="@layout/item_popular" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_user"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userGithub"
            app:layout_constraintWidth_percent="0.5"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search_user" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/cari_user"
            android:textColor="?attr/text_color"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/av_user" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userGithub">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/item_popular_placeholder" />

                    <include layout="@layout/item_popular_placeholder" />

                    <include layout="@layout/item_popular_placeholder" />

                    <include layout="@layout/item_popular_placeholder" />
                </LinearLayout>
            </ScrollView>

        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>