<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/color_black_white"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/color_black_white"
                android:contentDescription="@string/back_to_home"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="?attr/text_color"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_setting"
                app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="rrdhoi" />

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/setting"
                android:src="@drawable/ic_dots"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:padding="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_circle_color"
                app:elevation="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="?attr/text_color"
                    android:textSize="15sp"
                    tools:text="Muhammad Ridhoi" />


                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/grey_300"
                    android:textSize="12sp"
                    tools:text="Kalla Group" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/grey_300"
                    android:textSize="12sp"
                    tools:text="Makassar, Indonesia" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/color_rectangle_share"
            android:orientation="horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="?attr/text_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/repository"
                    android:textAlignment="center"
                    android:textColor="@color/grey_300"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="?attr/text_color"
                    android:textSize="15sp"
                    tools:text="758" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="@color/grey_300"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="?attr/text_color"
                    android:textSize="15sp"
                    tools:text="108" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/grey_300"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/color_rectangle_share"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_fav"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/shape_retangle_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_retangle_grey"
                android:contentDescription="@string/image_share"
                android:paddingHorizontal="20dp"
                android:paddingVertical="19dp"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/color_black_white"
            android:theme="@style/TabLayoutStyle"
            app:tabBackground="@drawable/tab_color_selector"
            app:tabIndicator="@drawable/shape_retangle_tablayout"
            app:tabIndicatorColor="@color/orange_500"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabPaddingEnd="15dp"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="?attr/text_color"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/grey_300"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
